# CMakeDemo

./: CMakeLists.txt  README.md  compile_commands.json  main.cpp
effective_modern_cpp/: CMakeLists.txt  data_types.h  deducing_types.cc  deducing_types.h  moving_to_modern_cpp.cc  moving_to_modern_cpp.h
experiments/: CMakeLists.txt  foo.cc  foo.h
